--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is an updated copy of my tf2 cfgs. I enjoy tweaking my cfgs and coming up with new ways to control my characters actions. In my mind, the more I tweak my cfgs, the more the game fits like a well work leather boot.
+This is an updated copy of my tf2 cfgs. I enjoy tweaking my cfgs and coming up with new ways to control my characters actions. In my mind, the more I tweak my cfgs, the more the game fits like a well worn leather boot.
 
 without mastercomfig, the autoexec and class cfg files are normally found in tf/cfg/ but since I'm using mastercomfig, these all get placed in a folder called overrides which in turn belongs in tf/cfg.
 
